<resources>
    <string name="app_name">LockerGuard</string>
    <string name="login_label">Login</string>
    <string name="name_label">Nome:</string>
    <string name="email_label">Email:</string>
    <string name="cpf_label">CPF:</string>
    <string name="idade_label">Idade:</string>
    <string name="celular_label">Celular:</string>
    <string name="senha_label">Senha:</string>
    <string name="cadastrar_label">Cadastre-se</string>
    <string name="hint_name">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_idade">Data de Nascimento</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_celular">Celular</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_sair">Sair</string>
    <string name="btn_login">Login</string>
    <string name="btn_continuarSlogin">Continuar sem Login</string>
    <string name="btn_recuperarsenha">Esqueci minha senha</string>
    <string name="btn_voltar">Voltar</string>
    <string name="recuperarsenha_label">Recupere sua Senha</string>
    <string name="btn_enviar">Enviar</string>
    <string name="cartao_label">Adicionar cartão</string>
    <string name="hint_cartao">Números do Cartão</string>
    <string name="hint_Dataval">Data de vencimento</string>
    <string name="hint_cvv">CVV</string>
    <string name="btn_cadastrar_card">Cadastrar Cartão</string>
    <string name="id_armario">ID Armario</string>
    <string name="endereco">Endereço</string>
    <string name="opcoes">Opções de locação</string>
    <string name="btn_continuar">Continuar</string>]
    <string name="btn_cartaosalvo">Cartões Salvos</string>
    <string name="hint_Apelido">Apelido do Cartão</string>
    <string name="qrcode_label">Qr Code</string>
    <string name="idarmario_label">ID ARMARIO</string>
    <string name="idnumber_label">123456</string>
    <string name="aviso">Mostre esse QR Code ao gerente para receber o pin.</string>
    <string name="pagamento">Confirmar Locação</string>
    <string name="maps">Escolha um armário no mapa.</string>
    <string name="Qrcode_Texto">Qrcode gerado</string>
    <string name="fechado">Estabelecimento fechado.Volte amanhã!</string>
</resources>