<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QrCodeActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnVoltar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/btn_voltar"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qrcode_label"
        android:textSize="24sp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:src="@drawable/qr_img"
        android:contentDescription="@string/qrcode_label"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idarmario_label"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/armario_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idnumber_label"
        android:textSize="20sp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="#000000"/>

</androidx.appcompat.widget.LinearLayoutCompat>
