<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:background="#d2d0d3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/img"
        android:layout_width="140dp"
        android:layout_height="140dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textSize="24sp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:padding="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_margin="5dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/HintTextStyle"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSenha"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/senha_label"
        android:layout_margin="5dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_gravity="center"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/ic_password"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/HintTextStyle"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRecuperar"
        android:text="@string/btn_recuperarsenha"
        android:textAllCaps="false"
        android:layout_gravity="end"
        android:textColorHint="@color/white"
        android:layout_width="190dp"
        android:textSize="12sp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_height="48dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"/>

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:hint="@string/btn_cadastrar"
        android:textColorHint="@color/white"
        android:layout_width="130dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonContinuarSLogin"
        android:text="@string/btn_continuarSlogin"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textColorHint="@color/white"
        android:layout_width="190dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonSair"
        android:text="@string/btn_sair"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:layout_width="130dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_height="wrap_content"/>


</androidx.appcompat.widget.LinearLayoutCompat>
