<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#d2d0d3"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroActivity">
    <!-- endIconMode"password"-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_label"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/ic_person"
        android:layout_marginTop="5dp"
        android:layout_margin="5dp"
        app:counterMaxLength="40"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextName"
            android:layout_width="match_parent"
            app:counterMaxLength="40"
            android:hint="@string/hint_name"
            android:textAppearance="@style/HintTextStyle"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/ic_email"
        android:paddingBottom="22dp"
        android:layout_margin="5dp"
        android:hint="@string/hint_email"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/HintTextStyle"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etIdade"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_age"
        android:layout_margin="5dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:paddingBottom="22dp"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_idade"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextIdade"
            android:layout_width="match_parent"
            android:textAppearance="@style/HintTextStyle"
            android:layout_height="wrap_content"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCPF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:counterMaxLength="11"
        app:startIconDrawable="@drawable/ic_number"
        android:layout_margin="5dp"
        android:layout_marginTop="25dp"
        app:counterEnabled="true"
        android:hint="@string/hint_cpf"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextCPF"
            android:layout_width="match_parent"
            android:textAppearance="@style/HintTextStyle"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCelular"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_celular"
        android:layout_margin="5dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:counterMaxLength="11"
        android:layout_gravity="center"
        app:counterEnabled="true"
        android:hint="@string/hint_celular"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/etNome">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:textAppearance="@style/HintTextStyle"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSenha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:counterMaxLength="25"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/ic_password"
        android:layout_margin="5dp"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_gravity="center"
        android:hint="@string/hint_senha">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/HintTextStyle"
            android:maxLength="25"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:hint="@string/btn_cadastrar"
        android:textColorHint="@color/white"
        android:layout_width="130dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnVoltar"
        android:text="@string/btn_voltar"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:layout_width="190dp"
        android:textSize="15sp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_height="48dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>