<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".CadastroActivity">
    <!-- endIconMode"password"-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cartao_label"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCard"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/ic_newcard"
        android:layout_marginTop="5dp"
        android:layout_margin="5dp"
        app:counterMaxLength="16"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cartao"
            android:inputType="text"
            android:textAppearance="@style/HintTextStyle"
            android:maxLength="16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCvv"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/ic_cvv"
        android:paddingBottom="22dp"
        android:layout_margin="5dp"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        android:hint="@string/hint_cvv"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:textAppearance="@style/HintTextStyle"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etDataval"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_age"
        android:layout_margin="5dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:paddingBottom="22dp"
        app:counterMaxLength="4"
        app:counterEnabled="true"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_Dataval"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextDataval"
            android:layout_width="match_parent"
            android:textAppearance="@style/HintTextStyle"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCPF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginTop="25dp"
        android:hint="@string/hint_cpf"
        android:orientation="vertical"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="11"
            android:textAppearance="@style/HintTextStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etApelido"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/ic_card"
        android:layout_marginTop="5dp"
        android:layout_margin="5dp"
        app:counterMaxLength="40"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextName"
            android:layout_width="match_parent"
            app:counterMaxLength="40"
            android:hint="@string/hint_Apelido"
            android:textAppearance="@style/HintTextStyle"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:hint="@string/btn_cadastrar"
        android:textColorHint="@color/background"
        android:layout_width="130dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnVoltar"
        android:text="@string/btn_voltar"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColorHint="@color/background"
        android:layout_width="190dp"
        android:textSize="15sp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_height="48dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>